# core

./: .claudeignore  .dockerignore  .env.docker  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  DOCKER_DEPLOYMENT.md  ENV_VAR_REFERENCE.md  Makefile  README.md  RELIABILITY_AUDIT.md  RELIABILITY_FIXES_APPLIED.md  SERVICES.md  TRACKING_ISSUES.md  docker-compose.yml  example.env
crates/admin-gateway/: Cargo.toml  Dockerfile
crates/admin-gateway/src/: config.rs  coordinator.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs  worker.rs
crates/ai-service/: Cargo.toml  Dockerfile
crates/ai-service/src/: config.rs  coordinator.rs  lib.rs  main.rs  state.rs
crates/ai-service/src/api/: mod.rs  routes.rs
crates/ai-service/src/plugin/: action_recognition.rs  anomaly_detection.rs  crowd_analytics.rs  facial_recognition.rs  lpr.rs  mock_detector.rs  mod.rs  pose_estimation.rs  registry.rs  yolov8_detector.rs
crates/alert-service/: Cargo.toml  Dockerfile
crates/alert-service/migrations/: 20250610100000_create_alert_rules_table.sql
crates/alert-service/src/: lib.rs  main.rs  notifier.rs  routes.rs  rule_engine.rs  store.rs  types.rs
crates/auth-service/: Cargo.toml  Dockerfile
crates/auth-service/migrations/: 20250109000000_create_auth_tables.sql  20250110000000_create_oidc_user_identities.sql
crates/auth-service/src/: config.rs  crypto.rs  error.rs  lib.rs  main.rs  models.rs  oidc.rs  repository.rs  routes.rs  service.rs  state.rs
crates/common/: Cargo.toml
crates/common/src/: ai_tasks.rs  auth_middleware.rs  frame_extractor.rs  leases.rs  lib.rs  playback.rs  recordings.rs  retention.rs  search.rs  state_store.rs  state_store_client.rs  streams.rs  thumbnail.rs  validation.rs
crates/coordinator/: Cargo.toml  Dockerfile
crates/coordinator/migrations/: 20250101000000_create_leases_table.sql  20250108000000_create_state_tables.sql  20250108100000_make_node_id_nullable.sql
crates/coordinator/src/: cluster.rs  config.rs  error.rs  lib.rs  main.rs  pg_state_store.rs  routes.rs  state.rs  state_routes.rs  store.rs
crates/device-manager/: Cargo.toml  Dockerfile
crates/device-manager/.sqlx/: query-10c815d6f728427ca5425aea571c28d91cef701b42856dcb36b6e5a739d2152c.json  query-18aa5c3ba640e0b92c625b95818dabb0217c962aadbc65a67aacc467db5defcf.json  query-216325d56233a5c896390203503001b3a822dcf5cd7af7242b79b64d9fbe78fe.json  query-23120261f6802337a59eed4ecd40fa74c5883e4518343065e4e860645314b745.json  query-3cf50ed29b788867255e59dbf515d56198e7704dc6a6fd09a0d0f74647ccafa2.json  query-3f8fddb9ab1d5b9f6541ea71b82e3d3c44eab38ed25561f8e96cbc315e254a6f.json  query-4179266a97fb241680f5bc9a567327c1a54ddd6343f769fe49f4b5aaa8393152.json  query-4468cfe85b4d32de37475cc2c06a64258e67cb792dcc067b30fdc08f75a0921f.json  query-45f78be90676fe50d593d6621420a8991db39f9cdeb0f6a8cb7ddeed506ddef1.json  query-4682bef0496ff094c401e00b5dce7c36b03ee7026bd888a0b06e257510503d3e.json  query-4c29a6101f8e326e9d5455873db8b7bf5885818349b1f2980847b7194a51d555.json  query-4dc815d926e17125a065188871608a484f611d8774477de0a7a1ec1cb0ab7509.json  query-55469fec32c7ffe15754eddcb27448934702b467f43e5fee0410b1b42f12dc60.json  query-720ddf872ae6f035b61620d039b3029026cde3c858446f6568518a8234a07c1b.json  query-74c4eedb1741dbfc41f92f6becc82413883f419f8152e8b3f1715d03f05b7bbb.json  query-80cebbde49000e0fe700bc8a7e5458295fc7cb2c9d8b098f6b624d6fa41ffda7.json  query-892a8de9a74f087d65e697879cd394146d5b986e8f641ca0dd50ba1fae1fbea4.json  query-a6de916fe67b899a143dc9a8d1906f96c33b13d246f468e1b8c5533038a8dbb7.json  query-b915fe4c5d352dd426fb7ac95d47a692870c580edf3aed9b89e22034271270e9.json  query-b928e179052f5d39ca4a49b4b98e2b30d36e2f4c592ee1f6c9a4b48b3027d395.json  query-c14c164c5513ed217ee6134b8ed2596ea4dd1f0819dfaf9020d86c9cb588d1df.json  query-c704a5dc27d03e2ffdc4050200c69f5da7d6034caf49f3bf0962df74796ab4b5.json  query-c87d4d2aa81488cd2f121391c52127d3f06173802739a82894d6f5e3b4627f86.json  query-c9bf63994e72a36b20a4ad9e4a059dd2362fbcfca958d60197a5a6eed60f09db.json  query-cf0dbe4184bf91370386348c38d598eaa31b7469bfcbd2f09352caf50c6ebd54.json  query-d224ffdaa1a48abf252a27c3d8d85a0a0398397e094131ddd551888199b39e8e.json  query-d993f6f05b68ad76c89df95d3e46656aa34024a0d595538d96715142682c86b5.json  query-e5ec719748dc301cc235f472d07adc76dee9f7bbc75c5d344d02ca3b80850aec.json  query-f7c5b31e4e441ff3696345d7623f14ba5bd8ad1867cc5e8602e27a04b705b819.json  query-fce28ec02087511d66be2f25ff08bd7dafa72e5045d69dae9d312cf4bb3d84c2.json
crates/device-manager/migrations/: 20250110100000_create_devices_table.sql  20250210100000_create_ptz_tables.sql  20250310100000_create_discovery_tables.sql  20250410100000_create_device_configurations_table.sql  20250510100000_create_firmware_tables.sql
crates/device-manager/src/: discovery.rs  firmware_client.rs  firmware_executor.rs  firmware_routes.rs  firmware_storage.rs  health_monitor.rs  imaging_client.rs  lib.rs  main.rs  prober.rs  ptz_client.rs  ptz_routes.rs  routes.rs  routes_simple.rs  state.rs  store.rs  tour_executor.rs  types.rs
crates/operator-ui/: Cargo.toml  Dockerfile
crates/operator-ui/frontend/: index.html  package.json  vite.config.js
crates/operator-ui/frontend/src/: App.jsx  index.css
crates/operator-ui/src/: config.rs  incident.rs  main.rs  state.rs  websocket.rs
crates/operator-ui/src/api/: ai.rs  alerts.rs  dashboard.rs  devices.rs  health.rs  incidents.rs  (+3 more)
crates/playback-service/: Cargo.toml  Dockerfile
crates/playback-service/migrations/: 0001_create_playback_sessions.sql  0002_add_dvr_fields.sql
crates/playback-service/src/: lib.rs  main.rs
crates/recorder-node/: Cargo.toml  Dockerfile
crates/recorder-node/migrations/: 20250612000000_create_retention_tables.sql  20250613000000_create_search_index_tables.sql
crates/recorder-node/src/: coordinator.rs  lib.rs  main.rs
crates/stream-node/: Cargo.toml  Dockerfile  README.md
crates/stream-node/src/: api.rs  config.rs  main.rs  metrics.rs  rtsp.rs  storage.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: correlation.rs  dashboards.rs  http_tracing.rs  lib.rs  logging.rs  metrics.rs  slo.rs  tracing.rs
(+161 files in other folders)
