[package]
name = "admin-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
common = { path = "../common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
