[package]
name = "ai-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
telemetry = { path = "../telemetry" }
anyhow = "1"
axum = "0.7"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "sync"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5.0"
async-trait = "0.1"
prometheus = "0.13"
base64 = "0.22"
image = "0.25"
tower-http = { version = "0.6", features = ["trace"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4"] }
