[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "json"] }

# Authentication & Authorization
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
openidconnect = "3"
rand = "0.8"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging and tracing
tracing = "0.1"

# Shared workspace crates
common = { path = "../common" }
telemetry = { path = "../telemetry" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "auth-service"
path = "src/main.rs"
