[package]
name = "coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "json"] }
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate"] }
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
tower = { version = "0.4", features = ["util"] }
