[package]
name = "device-manager"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait
async-trait = "0.1"

# Logging and telemetry
tracing = "0.1"
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client for probing
reqwest = { version = "0.12", features = ["json"] }

# ONVIF support
quick-xml = { version = "0.37", features = ["serialize"] }
md5 = "0.7"

# Base64 encoding
base64 = "0.22"

# Cryptography
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Common types
common = { path = "../common" }
telemetry = { path = "../telemetry" }

[dev-dependencies]
axum-test = "16"
tempfile = "3"
