[package]
name = "operator-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "operator-ui"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"

# Shared utilities
common = { path = "../common" }
telemetry = { path = "../telemetry" }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true
