[package]
name = "playback-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "playback_service"
path = "src/lib.rs"

[[bin]]
name = "playback-service"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

# For RTSP proxy
bytes = "1"
futures = "0.3"

# For WebRTC
webrtc = "0.11"
interceptor = "0.12"

[dev-dependencies]
tempfile = "3"
