[package]
name = "recorder-node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
telemetry = { path = "../telemetry" }
anyhow = "1"
axum = "0.7"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5.0"
aws-credential-types = "1.2.8"
aws-config = "1"
aws-sdk-s3 = "1"
prometheus = "0.13"
