[package]
name = "recorder-node"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
telemetry = { path = "../telemetry" }
anyhow = "1"
axum = "0.7"
base64 = "0.22"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5.0"
async-trait = "0.1"
aws-credential-types = "1.2.8"
aws-config = "1"
aws-sdk-s3 = "1"
prometheus = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
