[package]
name = "stream-node"
version = "0.2.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
telemetry = { path = "../telemetry" }
anyhow = "1"
axum = "0.7"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
gstreamer = "0.21"
reqwest = { version = "0.12", features = ["json", "stream"] }
lazy_static = "1.5.0"