[package]
name = "stream-node"
version = "0.2.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
telemetry = { path = "../telemetry" }
anyhow = "1"
axum = "0.7"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
tokio-util = "0.7"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-credential-types = "1.2.8"
aws-config = "1"
aws-sdk-s3 = "1"
notify = "6"
tokio-stream = "0.1"
prometheus = "0.13"
tower = "0.5"